# kalshi-trader

./: .opencode-project.json  Dockerfile  Procfile  README.md  app.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
src/kalshi_trader/: __init__.py  app.py
src/kalshi_trader/models/: __init__.py  market.py  order.py  position.py  strategy.py
src/kalshi_trader/routes/: __init__.py  backtest.py  markets.py  orders.py  positions.py  strategies.py
src/kalshi_trader/services/: __init__.py  market_data.py  multi_agent_orchestrator.py  strategy_engine.py  trading.py
