[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshi-trader"
version = "1.0.0"
description = "Kalshi prediction market trading API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.26",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_trader"]